fix that grey are missing (cube toolbar mobile), padding, wordwrap
[pivot-670]

--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -494,8 +494,7 @@ ul.tree-browser {
 .modal-dialog .container {
 	max-width: 100%;
 }
-.tree-browser,
-	.hide-xl {
+.tree-browser .hide-xl {
 		display: none;
 	}
 
